<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">English Phonetics</string>
    <string name="menu_settings">Settings</string>
    <string name="grade01">Grade 1</string>
    <string name="grade02">Grade 2</string>
    <string name="grade03">Grade 3</string>
    <string name="grade04">Grade 4</string>
    <string name="grade05">Grade 5</string>
    <string name="grade06">Grade 6</string>
    <string name="grade07">Grade 7</string>
    <string name="grade08">Grade 8</string>
    <string name="ok">OK</string>
    <string name="play">Play</string>
    <string name="record">Rec</string>
</resources>